# singularity

./: Cargo.toml  LICENSE
src/: main  main.rs  users.rs  weather.rs
