[package]
name = "weather_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
